<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tvname">name</string>
    <string name="tvlastname">last name</string>
    <string name="tvbday">birthDate</string>

    <string name="app_name">Task_1</string>
    <string name="name"> </string>
    <string name="lastName"> </string>
    <string name="birthDate"> </string>
    <string name="action_settings">Settings</string>
    <string name="send_button">send</string>
    <string name="exportText"> </string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="message">Hello world!</string>

</resources>
